# ros_environment

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  left.xml  right.xml
0_driver/: README.md
0_driver/can_receive_msg/: CMakeLists.txt  README.md  package.xml
0_driver/can_receive_msg/msg/: dbus.msg  imu_16470.msg  location_xy.msg  location_zyaw.msg  motor_debug.msg  power_buffer.msg  power_shooter_rfid_bufferinfo.msg  power_vol_cur.msg  projectile_hlth.msg
0_driver/flir_reader/: CMakeLists.txt  package.xml
0_driver/flir_reader/launch/: reader.launch
0_driver/flir_reader/src/: CamBase.cpp  CamBase.hpp  Camera.cpp  Camera.hpp  FlirCam.cpp  FlirCam.hpp  flycapNames.hpp  main.cpp  pgCam.cpp  pgCam.hpp
0_driver/old_driver/usb_can/: CMakeLists.txt  package.xml
0_driver/uwb/uwb_msgs/: package.xml
1_perception_cv/: CMakeLists.txt  README.md  package.xml
1_perception_cv/Tests/: testcam.cpp  threadtest.cpp
1_perception_cv/armor_detection/: .gitignore  CMakeLists.txt  CMakeLists_notROS.txt  readme.md
1_perception_cv/armor_detection/CalibrateTool/: calibration  calibration.cpp
1_perception_cv/armor_detection/Tests/: testRegress.cpp
1_perception_cv/armor_detection/buildCopies/: settings.xml
1_perception_cv/armor_detection/launch/: cv_ad.launch
1_perception_cv/armor_detection/src/: ArmorDetection.cpp  ArmorTracker.cpp  Camera.cpp  GimbalController.cpp  ROSHandle.cpp  Settings.cpp  ThreadPool.cpp  V4LCamDriver.cpp  VideoIn.cpp  cvThreadPool.cpp  main.cpp  mvCamera.cpp
1_perception_cv/armor_detection/stableConfigs/: settings.xml
1_perception_cv/armor_detection/undone/: SerialCom.cpp  SerialCom.hpp  serial.cpp  serial.hpp  testMain.cpp
1_perception_cv/buildCopies/CamConfigs/: testcam.xml
1_perception_cv/detect_and_track/: CMakeLists.txt  package.xml  readme.md
1_perception_cv/detect_and_track/launch/: BOTH.launch  detector.launch  reader.launch  shooter.launch
1_perception_cv/detect_and_track/msg/: ArmorRecord.msg  vertice.msg
1_perception_cv/detect_and_track/src/: CMakeLists.txt  defines.hpp  helpers.hpp
1_perception_cv/detect_and_track/stableConfigs/: settings.xml
1_perception_cv/include/mvux_camera/: CameraDefine.h
1_perception_cv/include/rm_cv/: ArmorDetection.hpp
1_perception_cv/old_controller/rune_debug/: package.xml
1_perception_cv/old_controller/self_aiming/: CMakeLists.txt
1_perception_cv/rm_cv_msgs/: CMakeLists.txt  package.xml
1_perception_cv/rm_cv_msgs/msg/: ArmorRecord.msg
1_perception_cv/rm_self_aiming/: CMakeLists.txt  package.xml
1_perception_cv/rm_self_aiming/cfg/: tuning.cfg
1_perception_cv/rm_self_aiming/launch/: rm_self_aiming_ff.launch  rm_self_aiming_pid.launch  rm_self_aiming_pid_with_x.launch  rm_tracking_pid.launch
1_perception_cv/rm_self_aiming/src/: armor_frame_pid_node.py  armor_pixel_pid_node.py  server_node.py
1_perception_cv/rm_tracking_pid/: CMakeLists.txt  README.md  package.xml
1_perception_cv/rm_tracking_pid/cfg/: tuning.cfg
1_perception_cv/rm_tracking_pid/launch/: rm_tracking_pid.launch
1_perception_cv/rm_tracking_pid/src/: armor_frame_pid_node.py  armor_pid_node.py  armor_tracking_node.py  server_node.py
1_perception_cv/rune/: 1.yml  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  LeNet-model  Makefile  README.md  cmake_install.cmake  package.xml  setting.xml
1_perception_cv/rune/catkin_generated/: generate_cached_setup.py  setup_cached.sh
1_perception_cv/rune/devel/: .catkin  .rosinstall  setup.sh
1_perception_cv/rune/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
1_perception_cv/rune/launch/: rune.launch
1_perception_cv/rune/src/: DigitRecognizer.cpp  DigitRecognizer.h  MnistRecognizer.cpp  MnistRecognizer.h  Settings.cpp  Settings.h  angleSol.cpp  angleSol.h  define.hpp  findRect.hpp  main.cpp  rune_ff_node.py
1_perception_cv/rune/tiny_dnn/: config.h
1_perception_cv/rune_aiming/: CMakeLists.txt  package.xml
1_perception_cv/rune_aiming/launch/: rune.launch
1_perception_cv/rune_aiming/src/: rune_ff_node.py
1_perception_cv/rune_debug/: CMakeLists.txt
1_perception_cv/rune_debug/launch/: debug.launch
1_perception_cv/rune_debug/src/: rune_debug.py
1_perception_cv/self_aiming/: CMakeLists.txt  package.xml
1_perception_cv/self_aiming/cfg/: tuning.cfg
1_perception_cv/self_aiming/config/: rmsoldier3_0708
1_perception_cv/self_aiming/launch/: beck_09.launch  rm_self_aiming_pid.launch  rm_self_aiming_pid_with_vel.launch  rm_self_aiming_pid_with_x.launch  smith_predictor_tester.launch
1_perception_cv/self_aiming/msg/: Pid.msg
1_perception_cv/self_aiming/src/: armor_frame_ff_node.py  armor_frame_pid_node.py  armor_frame_pid_node_with_x.py  armor_frame_pid_with_vel.py  armor_tracking_node.py  smith_predictor_with_pid.py
1_perception_cv/testcvmsg/: CMakeLists.txt  package.xml
1_perception_cv/testmsg/: CMakeLists.txt  package.xml
1_perception_cv/testmsg/src/: main.cpp
2_global_estimator_vins_stereo/calib_image_saver/: .gitignore  CMakeLists.txt
2_global_estimator_vins_stereo/calib_image_saver/src/: singleImageSaver.cc  stereoImageSaver.cc
2_localization/wheel_msgs/: CMakeLists.txt  package.xml
2_localization/wheel_msgs/msg/: vehicleSpeeds.msg  wheelSpeeds.msg
3_estimator/wheel_preprocess/: CMakeLists.txt
3_estimator/wheel_preprocess/src/: wtrans_node.cpp
6_controller/gimbal_controller/: CMakeLists.txt  package.xml
6_controller/gimbal_controller/cfg/: 20180617  cam_tracking.yaml
6_controller/gimbal_controller/include/: VisualServoController.h  VisualServoControllerWithFeedForward.h
6_controller/gimbal_controller/launch/: feedforward_controller.launch  gimbal_controller.launch  gimbal_controller_old.launch  visual_servo_controller.launch
6_controller/gimbal_controller/plot/: plot_with_omega.xml  rqt_multiplot.xml
6_controller/gimbal_controller/src/: VisualServoController.cpp  VisualServoControllerWithFeedForward.cpp  controller_tester.cpp  gimbal_controller_node.cpp  visual_servo_controller.cpp  visual_servo_controller_with_feedforward.cpp
ekf_uwb/: CMakeLists.txt  package.xml
ekf_uwb/src/: ekf_uwb_node.cpp
(+541 files in other folders)
