<?xml version="1.0"?>
<package format="2">.
  <name>uwb_msgs</name>
  <version>0.1.0</version>
  <description>CAN related message types.</description>

  <maintainer email="syangav@gmail.com">Yang Shaohui</maintainer>
  <author email="syangav@gmail.com">Yang Shaohui</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>

</package>
